k8s/kubernets/app/prometheus/dingtalk/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: dingtalk
   namespace: monitoring
   annotations:
     kubernetes.io/ingress.class: traefik
spec:
   rules:
   - host: dingtalk.xxx.com
     http:
       paths:
       - path:
         backend:
          serviceName: webhook-dingtalk
          servicePort: 80
